Cleanup, update tests
